<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="180"
        android:src="@drawable/arrow"
        android:text="@string/forward" />

    <ImageButton
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward_left"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="90"
        android:src="@drawable/arrow"
        android:text="@string/left" />

    <ImageButton
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward_right"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="-90"
        android:src="@drawable/arrow"
        android:text="@string/right" />

    <ImageButton
        android:id="@+id/forward_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="135"
        android:src="@drawable/arrow"
        android:text="@string/forward_left" />

    <ImageButton
        android:id="@+id/forward_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forward"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="-135"
        android:src="@drawable/arrow"
        android:text="@string/forward_right" />

    <ImageButton
        android:id="@+id/backward_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/left"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="45"
        android:src="@drawable/arrow"
        android:text="@string/backward_left" />

    <ImageButton
        android:id="@+id/backward_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/right"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:importantForAccessibility="no"
        android:rotation="-45"
        android:src="@drawable/arrow"
        android:text="@string/backward_right" />

    <ImageButton
        android:id="@+id/rotate_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backward_left"
        android:layout_alignParentStart="true"
        android:background="@null"
        android:importantForAccessibility="no"
        android:layout_marginTop="32dp"
        android:layout_marginStart="60dp"
        android:src="@drawable/turn_left"
        android:text="@string/rotate_left" />

    <ImageButton
        android:id="@+id/rotate_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backward_right"
        android:layout_alignParentEnd="true"
        android:background="@null"
        android:importantForAccessibility="no"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:src="@drawable/turn_right"
        android:text="@string/rotate_right" />

    <ImageButton
        android:id="@+id/backward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotate_left"
        android:layout_centerHorizontal="true"
        android:background="@null"
        android:importantForAccessibility="no"
        android:src="@drawable/arrow"
        android:text="@string/backward" />

    <ImageButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/stop"
        android:background="@null"
        android:text="@string/stop"
        android:importantForAccessibility="no"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>